	PR c++/69889

* cp-tree.h (AGGR_INIT_FROM_THUNK_P): New.
	* tree.c (build_aggr_init_expr): Set it.
	* semantics.c (simplify_aggr_init_expr): Check it.
	* cp-gimplify.c (cp_genericize_r): Don't walk into
	a call/aggr_init from a thunk.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@233733 138bc75d-0d04-0410-961f-82ee72b054a4